--- a/css/main.scss
+++ b/css/main.scss
@@ -174,6 +174,7 @@ footer {
 }
 
 .button {
+    cursor: pointer;
     min-width: 48px;
     background: #f9a825;
     transition: background 250ms ease-in-out, box-shadow 250ms ease-in-out;
@@ -253,6 +254,55 @@ footer {
             .actions {
                 display: grid;
                 place-items: center;
+            }
+        }
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background: #0e0e0e;
+        color: white;
+    }
+
+    .project {
+        .image-desktop {
+            box-shadow: 0px 6px 16px rgba(0, 0, 0, 1);
+            // box-shadow: none;
+        }
+        .image-mobile {
+            box-shadow: 0px 6px 16px rgba(0, 0, 0, 1);
+        }
+    }
+
+    main {
+        #hero {
+            .wrapper {
+                .social-media {
+                    i {
+                        color: white;
+                    }
+                    i:hover {
+                        color: #f9a825;
+                    }
+                }
+            }
+        }
+        #technologies {
+            ul {
+                li {
+                    display: inline-block;
+                    margin: 6px;
+                    padding: 8px 16px;
+                    border-radius: 100px;
+                    background-color: #3a3a3a;
+                    list-style: none;
+                }
+            }
+        }
+        #projects {
+            .actions {
+                margin-top: 32px;
             }
         }
     }
