--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-size: calc(32px * 0.5);
+  -webkit-transition: font-size 250ms ease-in-out;
+  transition: font-size 250ms ease-in-out;
 }
 
 body {
@@ -89,11 +91,11 @@ h2 {
 }
 
 .social-media a {
-  margin-right: 40px;
+  margin-right: calc(80px * 0.5);
 }
 
 .social-media a i {
-  font-size: 40px;
+  font-size: calc(80px * 0.5);
   color: black;
   -webkit-transition: color 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
   transition: color 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
@@ -138,7 +140,16 @@ main #hero {
 }
 
 main #hero .wrapper .hero-image {
+  margin-top: 32px;
+  margin-bottom: 32px;
   width: 35vw;
+  height: auto;
+}
+
+main #hero .wrapper .hero-content .subtitle {
+  display: block;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 main #technologies ul li {
@@ -155,7 +166,7 @@ main #projects .actions {
 }
 
 footer {
-  padding: 20px 10px;
+  padding: 48px 10px;
   text-align: center;
   background: #000000;
   color: white;
@@ -268,55 +279,55 @@ footer .social-media a i {
 
 @media only screen and (min-width: 1500px) {
   * {
-    font-size: calc(32px * 0.75);
+    font-size: calc(32px * 0.65);
   }
   .link {
-    font-size: calc(32px * 0.75);
+    font-size: calc(32px * 0.65);
   }
   h1 {
-    font-size: calc(100px * 0.75);
+    font-size: calc(100px * 0.65);
   }
   h2 {
-    font-size: calc(60px * 0.75);
+    font-size: calc(60px * 0.65);
   }
   .subtitle {
-    font-size: calc(50px * 0.75);
+    font-size: calc(50px * 0.65);
   }
   .overline {
-    font-size: calc(24px * 0.75);
+    font-size: calc(24px * 0.65);
   }
   .social-media a {
-    margin-right: 40px;
+    margin-right: calc(80px * 0.65);
   }
   .social-media a i {
-    font-size: 40px;
+    font-size: calc(80px * 0.65);
   }
 }
 
 @media only screen and (min-width: 2000px) {
   * {
-    font-size: calc(32px * 1);
+    font-size: calc(32px * 0.8);
   }
   .link {
-    font-size: calc(32px * 1);
+    font-size: calc(32px * 0.8);
   }
   h1 {
-    font-size: calc(100px * 1);
+    font-size: calc(100px * 0.8);
   }
   h2 {
-    font-size: calc(60px * 1);
+    font-size: calc(60px * 0.8);
   }
   .subtitle {
-    font-size: calc(50px * 1);
+    font-size: calc(50px * 0.8);
   }
   .overline {
-    font-size: calc(24px * 1);
+    font-size: calc(24px * 0.8);
   }
   .social-media a {
-    margin-right: 40px;
+    margin-right: calc(80px * 0.8);
   }
   .social-media a i {
-    font-size: 40px;
+    font-size: calc(80px * 0.8);
   }
 }
 
