--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,3 +4,58 @@
 .no-tap-highlight-color {
     -webkit-tap-highlight-color: transparent;
 }
+
+.hero-image {
+    #eyes {
+        #eye-right {
+            animation: 3s infinite alternate ease-in-out eye-right-move;
+        }
+        #eye-left {
+            animation: 3s infinite alternate ease-in-out eye-left-move;
+        }
+        #eye-left {
+            animation: 3s infinite alternate ease-in-out eye-left-move;
+        }
+    }
+    #mouth {
+        #mouth-top {
+            animation: 3s infinite alternate ease-in-out mouth-top-move;
+        }
+        #mouth-bottom {
+            animation: 3s infinite alternate ease-in-out mouth-bottom-move;
+        }
+    }
+}
+
+@keyframes eye-right-move {
+    0% {
+        transform: translate(180px, 66px) rotate(-90deg);
+    }
+    100% {
+        transform: translate(90px, 66px) rotate(-90deg);
+    }
+}
+@keyframes eye-left-move {
+    0% {
+        transform: translate(90px, 66px) rotate(-90deg);
+    }
+    100% {
+        transform: translate(0px, 66px) rotate(-90deg);
+    }
+}
+@keyframes mouth-top-move {
+    0% {
+        transform: translate(90px, 0px);
+    }
+    100% {
+        transform: translate(0px, 0px);
+    }
+}
+@keyframes mouth-bottom-move {
+    0% {
+        transform: translate(90px, 10px);
+    }
+    100% {
+        transform: translate(0px, 10px);
+    }
+}
